--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -103,3 +103,29 @@
     text-align: center;
     font-weight: 300;
 }
+
+.result{
+    padding: 0 5%;
+    max-height: 70vh;
+    overflow-y: scroll;
+}
+.result::-webkit-scrollbar{
+    display: none;
+}
+.result-title{
+    margin: 40px 0;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.result img{
+    width: 40px;
+    border-radius: 50%;
+}
+
+.result-date{
+    display: flex;
+    align-items: start;
+    gap: 20px;
+}
