--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -129,3 +129,31 @@
     align-items: start;
     gap: 20px;
 }
+.loader{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.loader hr{
+    border-radius: 4px;
+    border: none;
+    background-color: #F6F7F8;
+    background: linear-gradient(to right, #9ED7FF, #FFFFFF, #9ED7FF);
+    background-size: 800px 50px;
+    height: 20px;
+    animation: loader 3s infinite linear;
+}
+@keyframes loader {
+    0%{
+        background-position: -800px 0px;
+    }
+    100%{
+        background-position: 800px 0px;
+    }
+}
+.result-data p{
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 1.8;
+}
