--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -30,6 +30,7 @@
 .sidebar .recent {
     display: flex;
     flex-direction: column;
+    animation: fadeIn 1.5s;
 }
 
 .sidebar .recent-title{
@@ -56,4 +57,9 @@
 }
 .sidebar .bottom-item{
     padding-right: 10px;
+}
+@media (max-width: 600px) {
+    .sidebar{
+        display: none;
+    }
 }
